--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
-  "homepage": "https://mdipasquale315.github.io/robofriends-vite",
+  "homepage": "https://mdipasquale315.github.io/Robofriends-3",
   "private": true,
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
@@ -12,7 +13,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d dist",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
